# appinventor-sources

appinventor/: build-common.xml  build.xml
appinventor/aiplayapp/youngandroidproject/: project.properties
appinventor/appengine/: build.xml
appinventor/appengine/war/: Ya.css  blocklyframe.html  index.html  index.jsp  login.jsp
appinventor/appengine/war/WEB-INF/: appengine-web.xml  web.xml
appinventor/appengine/war/static/css/: Ya.css
appinventor/blocklyeditor/: ploverConfig.js
appinventor/blocklyeditor/src/: replmgr.js  versioning.js  warningHandler.js
appinventor/blocklyeditor/src/blocks/: lists.js
appinventor/blocklyeditor/src/msg/en/: _messages.js
appinventor/blocklyeditor/src/msg/zh_cn/: _messages.js
appinventor/blocklyeditor/src/msg/zh_tw/: _messages.js
appinventor/buildserver/: build.xml
appinventor/components/: build.xml
appinventor/docs/companions/: CompanionUpgradeHelper.asc  MITAI2Companion.apk  MITAI2Companion.asc
appinventor/docs/html/reference/components/: userinterface.html
appinventor/docs/reference/components/: experimental.html  sensors.html
appinventor/lib/jetty-distribution-9.2.1.v20140609/demo-base/webapps/: async-rest.war  test-jaas.war  test-jndi.war  test-spec.war  xref-proxy.war
appinventor/misc/chatproxy/: Cargo.toml
appinventor/misc/chatproxy/deployment/: Dockerfile
appinventor/misc/chatproxy/src/: anthropic.rs  chat.proto  chat.rs  chat_pb2.py  dallelib.rs  geminilib.rs  image.proto  image.rs  image_pb2.py  llama.rs  main.rs  maketest.py  maketoken.py  mod.rs  ollamalib.rs  palmlib.rs  testprod.py  titan.rs  tr.proto  tr.rs  tr_pb2.py
appinventor/misc/passwordmail/: getmail.fcgi  mailsender.py  message.proto  message_pb2.py
appinventor/starter/: build.xml
jettybase/: appinventor-override-web.xml  appinventor.ini.sample  appinventor.xml
jettybase/start.d/: http.ini
jettybase/webapps/: ROOT  appinventor.xml
tmp/: Sample.java  aiContestLogIn.txt
(+88 files in other folders)
