[package]
name = "chat"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.59"
thiserror = "1.0.38"
bytes = "1.1.0"
confy = "0.4.0"
lazy_static = "1.4.0"
sqlx =  { version = "0.6.1", features = [ "sqlite", "runtime-actix-native-tls" ]}
quick-protobuf = "0.8.0"
warp = "0.3.2"
http = "0.2.6"
debug_print = "1.0.0"
structopt = "0.3.22"
serde = { version = "1.0.123", features = ["serde_derive"]}
serde_json =  { version = "1.0.62" }
async-openai = "0.10.3"
reqwest = { version = "0.11.18", features = ["json"] }
# async-openai = {path = "../../async-openai"}
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4"] }
sha1 = "0.10.1"
sha2 = "0.10.2"
hmac = "0.12.1"
base64 = "0.21.2"
aws-config = "0.56.1"
aws-types = "0.56.1"
aws-credential-types = "0.56.1"
aws-sdk-bedrockruntime = "0.3.0"



